<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".TakePictureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff80081c"
            android:textColor="#ffffffff"
            android:text="@string/text_Upload"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="onLogoutClick"
            android:textSize="10sp"
            android:text="@string/text_Logout" />

        <ImageView
            android:id="@+id/ivTakePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:onClick="onTakePictureClick"
            android:src="@drawable/camera" />


        <Button
            android:id="@+id/btUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:onClick="onUploadClick"
            android:text="@string/text_btUpload" />

        <TextView
            android:id="@+id/tvResponse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="#ffffffff"
            android:background="#ff80081c"
            android:text="@string/text_Response"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvResultUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/text_Response"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/ivResponseImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/picture" />
    </LinearLayout>

</ScrollView>